syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/megamind/protos/common";
option java_package = "ru.yandex.alice.megamind.protos.common";

message TLstmState {
    repeated float HVector = 1 [json_name = "h_vector"];
    repeated float CVector = 2 [json_name = "c_vector"];
}

message TGcMemoryState {
    map<string, TLstmState> ModelState = 1 [json_name = "model_state"];
}
